--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 NODE_ENV=development
 VUE_APP_BASE_API = 'http://localhost:8778'
-VUE_APP_BASE_API = 'http://114.115.212.129:8778'
-VITE_BASEPATH = 'http://114.115.212.129:8778'
+VITE_BASEPATH = 'http://localhost:8778'
+VUE_APP_BASE_API = 'http://192.168.203.132:8778'
+VITE_BASEPATH = 'http://192.168.203.132:8778'
